<resources>
    <string name="app_name">JQMovie</string>
    <string name="Year">Year</string>
    <string name="Genre">Genre</string>
    <string name="firstName">Firstname</string>
    <string name="lastName">Lastname</string>
    <string name="birthdate">Birthdate</string>
    <string name="submit">Submit</string>
    <string name="title_activity_main">ShowActivity</string>
    <string name="biography">Biography</string>
    <string name="movies">Movies</string>
    <string name="director">Director</string>
    <string name="directors">Directors</string>
    <string name="actors">Actors</string>
    <string name="btnmovie">Choice movies</string>
    <string name="btndirector">Choice director</string>
    <string name="btnactor">Choice actors</string>
    <string name="nameMovie">Name</string>
    <string name="genre">Genre</string>
    <string name="year">Year</string>
    <string name="synopsis">Synopsis</string>
    <string name="listactors">List of actors</string>
    <string name="listdirectors">List of directors</string>
    <string name="listmovies">List of movies</string>
    <string name="search">Search here</string>
    <string name="abouttxt">This application was created as part of a project for the mobile development course under the orders of Dr. Michael Schumacher.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="lang">Application language</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="confirm">Are you sure ?</string>
    <string name="yes">yes</string>
    <string name="cancel">cancel</string>
    <string name="nothing">No Film</string>

</resources>
