<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <group android:id="@+id/menu_general">
        <item android:id="@+id/item_actor" android:title="@string/actors" android:icon="@mipmap/actors"/>
        <item android:id="@+id/item_director" android:title="@string/directors" android:icon="@mipmap/directors"/>
        <item android:id="@+id/item_movie" android:title="@string/movies" android:icon="@mipmap/movies"/>
    </group>

    <group android:id="@+id/menu_footer">
        <item android:id="@+id/item_about" android:title="@string/about" android:icon="@mipmap/about"/>
        <item android:id="@+id/item_settings" android:title="@string/settings" android:icon="@mipmap/settings"/>

    </group>
</menu>