<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jqmovie.jqmovie.Actors.ActorEdit">

    <TextView
        android:id="@+id/actor_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/firstName"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/firstName"
        app:layout_constraintTop_toBottomOf="@+id/actor_firstname"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/actor_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lastName"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/firstname"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/et_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastName"
        app:layout_constraintTop_toBottomOf="@+id/actor_lastname"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="372dp"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="464dp"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>
